--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>log4j-api</artifactId>
             <version>2.13.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -60,5 +67,7 @@
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
